# PottsPlayground

./: .gitignore  Efficiency of Simulated Annealing Strategies.docx  FlipsPerSecond.py  MANIFEST.in  PlacerTest.py  Potts Model Formulations of Combinatorial Optimization Problems.docx  README.rst  ValidateSolvers.py  nextpnr_sa_placer.py  potts_palacer_options.json  pyproject.toml  res.pkl  setup.py
DemoFiles/: ArgsFile.pkl  core.json  core.pcf  main.pcf  testlogic.json  testlogic.v  tiny.pcf  tiny_comb_fpga.json  tiny_comb_gates.v  tiny_combinatorial.v  tiny_synchronous.json  tiny_synchronous.v
Doc/: annealing.rst  basetask.rst  conf.py  index.rst  taskmodifiers.rst  tasks.rst
Experiments/: ActionEfficiency.py  ColoringTempCal.py  ColoringTimeToSolution.py  Ice40PlacerTest.py  InvertibleLogicTest.py  smallPlots.py
PottsPlayground/: Annealing.cp313-win_amd64.pyd  Kernels.py  Schedules.py  __init__.py
Results/: PlacerCostArchData.pkl  res.pkl
Solvers/: Annealables.h  Annealing.cu  AnnealingCore.cu  ArgsFile.pkl  BuildAnnealing.py  IsingAnnealable.cu  NumCuda.hpp  PieceWiseLinear.cpp  PottsJitAnnealable - Copy.cu  PottsJitAnnealable.cu  PottsPrecomputeAnnealable.cu  TspAnnealable.cu  TspLimitedAnnealable.cu  debugBuild.sh  functionBody.cpp
Tasks/: BaseTask.py  BinarizeTask.py  GraphColoringTask.py  Ice40PlacerTask - Copy.py  Ice40PlacerTask.py  InvertibleLogicTask.py  MinorEmbeddedTask.py  TravelingSalesmanTask.py
cuda-test/: build_matmul.py  compare_hardware.py  main  matmul.cpp  simple_matmul_test.cpp
experiments/: GCSparsityEfficiency.py  Ice40Placement.py  NhppRealFps.py  SpeedTest.py  TspActionEfficiency.py
init/: __init__.py
old/: AllSolvers.cpp  BuildAllSolvers.py  nextpnr_sa_placer.py
(+60 files in other folders)
